adding option to fetch comments for a clip
