# src/app/api/clip/[id]/comments/route.ts
@@ -1,0 +1,55 @@
+import { NextResponse, NextRequest } from 'next/server';
+import { cookies } from 'next/headers';
+import { sunoApi } from '@/lib/SunoApi';
+import { corsHeaders } from '@/lib/utils';
+
+export const dynamic = 'force-dynamic';
+
+export async function GET(req: NextRequest, { params }: { params: { id: string } }) {
+  if (req.method === 'GET') {
+    try {
+      const clipId = params.id;
+      const url = new URL(req.url);
+      const order = url.searchParams.get('order') || 'newest';
+      const cookie = (await cookies()).toString();
+
+      const data = await (await sunoApi(cookie)).getClipComments(clipId, order);
+
+      return new NextResponse(JSON.stringify(data), {
+        status: 200,
+        headers: {
+          'Content-Type': 'application/json',
+          ...corsHeaders
+        }
+      });
+    } catch (error) {
+      console.error('Error fetching clip comments:', error);
+
+      return new NextResponse(
+        JSON.stringify({ error: 'Internal server error' }),
+        {
+          status: 500,
+          headers: {
+            'Content-Type': 'application/json',
+            ...corsHeaders
+          }
+        }
+      );
+    }
+  } else {
+    return new NextResponse('Method Not Allowed', {
+      headers: {
+        Allow: 'GET',
+        ...corsHeaders
+      },
+      status: 405
+    });
+  }
+}
+
+export async function OPTIONS(request: Request) {
+  return new Response(null, {
+    status: 200,
+    headers: corsHeaders
+  });
+} 
